--- a/src/app/admin-panel/add-post/add-post.component.html
+++ b/src/app/admin-panel/add-post/add-post.component.html
@@ -1,29 +1,26 @@
 <form class="post-form" (ngSubmit)=send(postForm) #postForm="ngForm">
 
   <mat-form-field color="accent">
-    <mat-label>Title</mat-label>
-    <input ngModel matInput placeholder="" maxlength="20" type="text" name="title" required>
-    <!-- <mat-icon matSuffix>assignment_ind</mat-icon> -->
+    <mat-label>Tytuł</mat-label>
+    <input ngModel matInput placeholder="" maxlength="20" type="text" name="title" #title required>
+    <mat-hint align="end">{{title.value.length}} / 20</mat-hint>
+    <!-- <mat-icon matSuffix>title</mat-icon> -->
     <!-- <mat-error *ngIf="">error</mat-error> -->
   </mat-form-field>
-  <br>
-  <mat-form-field color="accent">
-    <mat-label>img</mat-label>
-    <input ngModel matInput placeholder="" type="url" name="img" required>
-    <!-- <mat-icon matSuffix>lock_open</mat-icon> -->
-    <!-- <mat-error *ngIf="">error</mat-error> -->
-    <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
-        <mat-hint align="end">{{message.value.length}} / 256</mat-hint> -->
-  </mat-form-field>
-  <br>
 
   <mat-form-field color="accent">
-    <mat-label>Text</mat-label>
+    <mat-label>IMG_URL</mat-label>
+    <input ngModel matInput placeholder="" type="url" name="img" required>
+    <mat-icon matSuffix>link</mat-icon>
+     <!-- <mat-hint align="end">{{img.value.length}} / 256</mat-hint> -->
+  </mat-form-field>
+
+  <mat-form-field color="accent">
+    <mat-label>Treść...</mat-label>
     <textarea ngModel matInput placeholder="" type="text" name="text" required></textarea>
-    <!-- <mat-icon matSuffix>lock_open</mat-icon> -->
     <!-- <mat-error *ngIf="">error</mat-error> -->
-    <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
-          <mat-hint align="end">{{message.value.length}} / 256</mat-hint> -->
+    <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong></mat-hint> -->
+    <!-- <mat-hint align="end">{{message.value.length}} / 256</mat-hint> -->
   </mat-form-field>
   <button mat-raised-button type="submit" color="warn" [disabled]="postForm.invalid">Add post</button>
 
