--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,4 @@
-<!-- <div class="half"> -->
-
-  <div class="container-intro">
+  <section class="container-intro">
     <h1>Zostań na chwilę i posłuchaj.</h1>
     <p>Strona ta powstała jako projekt zaliczeniowy kierunku - Programista Front-End z AngularJS - Wyższej Szkoły Bankowej we Wrocławiu </p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo adipisci, obcaecati molestias numquam maxime commodi inventore
@@ -21,11 +19,4 @@
         <li><img src="./../../assets/mongolab.png" alt="mongolab logo"></li>
       </ul>
     </div>
-  </div>
-
-<!-- </div> -->
-<!-- <div class="half">
-
-  <h1>hello</h1>
-
-</div> -->
+  </section>
