--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -2,14 +2,14 @@
   <h1>Portfolio</h1>
   <div class="header">
     <button class="filter-btn" data-filter="all">all</button>
-    <button class="filter-btn" data-filter=".bootstrap" (click)="bootstrap()">bootstrap</button>
+    <button class="filter-btn" data-filter=".bootstrap">bootstrap</button>
     <button class="filter-btn" data-filter=".vanillajs">vanillajs</button>
     <button class="filter-btn" data-filter=".angular">angular</button>
     <button class="filter-btn" data-filter=".angularjs">angularjs</button>
     <button class="filter-btn" data-filter=".react">react</button>
     <button class="filter-btn" data-filter=".wordpress">wordpress</button>
 
-    <button class="sort-btn" data-sort="year:desc">Newest <i class="fas fa-sort-numeric-down"></i></button>
+    <button class="sort-btn" data-sort="year:desc">Najnowsze <i class="fas fa-sort-numeric-down"></i></button>
   </div>
   <div class="body">
     <ul class="courses" id="mixitup-wrapper" #test>
@@ -37,7 +37,7 @@
           <img src="./../../assets/no-img.jpg" alt="no image image">
         </a>
         <h2>
-          html css bootstrap
+            example angular
         </h2>
       </li>
 
@@ -46,7 +46,7 @@
           <img src="./../../assets/no-img.jpg" alt="no image image">
         </a>
         <h2>
-          html css bootstrap vanillajs
+            example angular
         </h2>
       </li>
 
@@ -55,7 +55,7 @@
           <img src="./../../assets/no-img.jpg" alt="no image image">
         </a>
         <h2>
-          example
+          example angularjs
         </h2>
       </li>
 
@@ -64,7 +64,7 @@
           <img src="./../../assets/no-img.jpg" alt="no image image">
         </a>
         <h2>
-          example
+          example react
         </h2>
       </li>
 
@@ -73,7 +73,7 @@
           <img src="./../../assets/no-img.jpg" alt="no image image">
         </a>
         <h2>
-          example
+          example bootstrap
         </h2>
       </li>
 
@@ -82,7 +82,7 @@
           <img src="./../../assets/no-img.jpg" alt="no image image">
         </a>
         <h2>
-          example
+          example angular bootstrap
         </h2>
       </li>
 
@@ -91,7 +91,7 @@
           <img src="./../../assets/no-img.jpg" alt="no image image">
         </a>
         <h2>
-          example
+          example wordpress
         </h2>
       </li>
     </ul>
