--- a/src/app/admin-panel/add-post/add-post.component.css
+++ b/src/app/admin-panel/add-post/add-post.component.css
@@ -10,8 +10,9 @@
   margin: 0px auto;
   background-color: rgba(0, 0, 0, 0.4);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-
+  margin-bottom: 30px;
 }
+
 .post-form button {
   display: block;
   width: 20%;
