--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
-<div class="admin-container">
+<section class="admin-container">
   <div class="nav">
     <div routerLink="add" routerLinkActive="active">Add post</div>
     <div routerLink="messages" routerLinkActive="active">Messages</div>
@@ -7,4 +7,4 @@
   <div class="body">
     <router-outlet></router-outlet>
   </div>
-</div>
+</section>
