--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,51 +1,53 @@
-<div class="contactContainer">
+<section class="contactContainer">
   <div class="one">
-
     <div id="formWrapper">
       <h1>
-        Ask me anything
+        Kontakt
       </h1>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, doloremque! Debitis aperiam, nihil ducimus quo perferendis
-        ratione, repudiandae assumenda soluta dignissimos tempora illo distinctio cumque doloremque. Atque libero ducimus
-        quam?
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, doloremque! Debitis aperiam, nihil ducimus quo perferendis
+          ratione, repudiandae assumenda soluta dignissimos tempora illo distinctio cumque doloremque. Atque libero ducimus
+          quam?
       </p>
       <form class="contactForm" [formGroup]="contactForm" (ngSubmit)="sendMessage()" #form="ngForm">
 
         <div class="formRow">
           <mat-form-field color="accent" appearance="outline">
-            <mat-label>Your name</mat-label>
-            <input matInput maxlength="50" type="text" formControlName="name" >
-            <mat-error *ngIf="contactForm.get('name').errors">error</mat-error>
+            <mat-label>Imię</mat-label>
+            <input matInput maxlength="50" type="text" formControlName="name">
+            <mat-hint align="end">{{ contactForm.value.name ? contactForm.value.name.length : 0 }} / 50</mat-hint>
+            <mat-error *ngIf="contactForm.get('name').errors['required']">Pole wymagane</mat-error>
+
           </mat-form-field>
 
           <mat-form-field color="accent" appearance="outline">
             <mat-label>E-mail</mat-label>
-            <input matInput maxlength="50" type="email" formControlName="email" >
-            <!-- <mat-error *ngIf="">error</mat-error> -->
+            <input matInput maxlength="50" type="email" formControlName="email">
+            <mat-hint align="end">{{ contactForm.value.email ? contactForm.value.email.length : 0 }} / 50</mat-hint>
+            <mat-error *ngIf="contactForm.get('email').errors['required']">Pole wymagane</mat-error>
           </mat-form-field>
         </div>
 
         <mat-form-field color="accent" appearance="outline">
-          <mat-label>Subject</mat-label>
-          <input matInput maxlength="50" type="subject" formControlName="subject" >
-          <!-- <mat-error *ngIf="">error</mat-error> -->
+          <mat-label>Temat</mat-label>
+          <input matInput maxlength="50" type="subject" formControlName="subject">
+          <mat-hint align="end">{{ contactForm.value.subject ? contactForm.value.subject.length : 0 }} / 50</mat-hint>
+          <mat-error *ngIf="contactForm.get('subject').errors['required']">Pole wymagane</mat-error>
         </mat-form-field>
 
         <mat-form-field color="accent" appearance="outline">
-          <mat-label>Message...</mat-label>
-          <textarea matInput maxlength="500" type="message" formControlName="message" rows="4" >
+          <mat-label>Wiadomość...</mat-label>
+          <textarea matInput maxlength="500" type="message" formControlName="message" rows="4">
           </textarea>
-          <!-- <mat-error *ngIf="">error</mat-error> -->
+          <mat-hint align="end">{{ contactForm.value.message ? contactForm.value.message.length : 0 }} / 500</mat-hint>
+          <mat-error *ngIf="contactForm.get('message').errors['required']">Pole wymagane</mat-error>
         </mat-form-field>
 
         <button mat-raised-button type="submit" color="warn" [disabled]="contactForm.invalid || contactForm.pristine">Ask</button>
       </form>
     </div>
-
-
   </div>
   <div class="two">
     <div id="map" #gmap></div>
   </div>
-</div>
+</section>
