--- a/src/app/cv/cv.component.css
+++ b/src/app/cv/cv.component.css
@@ -11,11 +11,12 @@
 a:link,
 a:visited {
   color: white;
+  transition: all .2s ease-in-out;
 }
 
 a:hover,
 a:active {
-  color: white;
+  color: #F44336;
   text-decoration: underline;
 }
 
@@ -106,6 +107,8 @@ a:active {
 .cv-side-right .heading-name>h2 {
   font-size: 2em;
   font-style: italic;
+  font-weight: 300;
+  color: #F44336;
 }
 
 .cv-side-left .heading:before,
